--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Secondary project</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,700|Signika:400,700&display=swap&subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -229,4 +229,3 @@
         </footer>
     </body>
 </html>
-    
