--- a/index.html
+++ b/index.html
@@ -1,231 +1,199 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Secondary project</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,700|Signika:400,700&display=swap&subset=latin-ext" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <nav class="navigation">
-            <div class="container">
-                <ul>
-                    <li>
-                        <a href="">About</a>
-                        <ul>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">What we do</a>
-                        <ul>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Gallery</a>
-                        <ul>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Contact</a>
-                        <ul>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                            <li>
-                                <a href="">Gallery</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+
+<head>
+    <meta charset="utf-8">
+    <title>Secondary project</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,700|Signika:400,700&display=swap&subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <nav class="navigation">
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">What we do</a>
+                    <ul>
+                        <li>
+                            <a href="">Design</a>
+                        </li>
+                        <li>
+                            <a href="">Outsourcing</a>
+                        </li>
+                        <li>
+                            <a href="">Analyze</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">Gallery</a>
+                    <ul>
+                        <li>
+                            <a href="">Conference</a>
+                        </li>
+                        <li>
+                            <a href="">Birthday</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <header class="splash">
+        <div class="splash-inner">
+            <h1 class="page-title">hello, <br> we are <span>creatively</span>.</h1>
+            <h2 class="page-subtitle">We builds products and brands.. </h2>
+            <a href="#" class="btn btn-one">see our work</a>
+        </div>
+    </header>
+    <section class="container">
+        <h1 class="title">our services</h1>
+        <div class="flex-grand-parent">
+            <div class="flex-parent">
+                <h1 class="services-title">design</h1>
+                <p>curabitur orname.</p>
+                <p>
+                    Sed condimentum ligula, elementum eu, wisi. Morbi risus dictum
+                    eu, sem. Mauris tempor diam. Aliquam et justo. Integer nonummy
+                    sagittis. Curabitur egestas. Cum sociis natoque penatibus et
+                    magnis dis parturient montes, nascetur ridiculus mus. Etiam tellus.
+                    Integer euismod nibh, imperdiet felis, vestibulum et, congue urna.
+                    Duis sit amet, volutpat a.
+                </p>
+                <div class="floating-number">1</div>
+                <div class="btn btn-two">read more</div>
             </div>
-        </nav>
-        <header class="splash">
-            <div class="splash-inner">
-                <h1 class="page-title">hello, <br> we are <span>creatively</span>.</h1>
-                <h2 class="page-subtitle">We builds products and brands.. </h2>
-                <a href="#" class="btn btn-one">see our work</a>
+            <div class="flex-parent">
+                <h1 class="services-title">code</h1>
+                <p>cras vel comodo.</p>
+                <p>
+                    In mollis, purus non placerat a, hendrerit ac, blandit ipsum,
+                    vel nonummy dui lectus, pellentesque erat dictum eu, facilisis
+                    vel, adipiscing urna. Aenean quis massa lacinia turpis ligula,
+                    semper risus in dolor. Quisque urna. Donec ipsum primis in est.
+                    Maecenas ut lorem. Donec non ante ipsum dolor nonummy ligula.
+                    Vivamus.
+                </p>
+                <div class="floating-number">2</div>
+                <div class="btn btn-three">read more</div>
             </div>
-        </header>
-        <section class="container">
-            <h1 class="title">our services</h1>
-                <div class="flex-grand-parent">
-                <div class="flex-parent">
-                    <h1 class="services-title">design</h1>
-                    <p>curabitur orname.</p>
+            <div class="flex-parent">
+                <h1 class="services-title">marketing</h1>
+                <p>donec fringilla.</p>
+                <p>
+                    Sed adipiscing mauris. Donec consectetuer adipiscing sollicitudin.
+                    Fusce ullamcorper ligula accumsan sit amet, nonummy condimentum
+                    eget, nulla. Vivamus magna. Cum sociis natoque penatibus et dui.
+                    Cras eu turpis semper eros. Phasellus purus. Sed vehicula
+                    ullamcorper. Nam ac erat. Proin non sem. Quisque vehicula enim
+                    molestie ultricies ante.
+                </p>
+                <div class="floating-number">3</div>
+                <div class="btn btn-four">read more</div>
+            </div>
+        </div>
+    </section>
+    <section class="container">
+        <h1 class="title">our work</h1>
+        <div class="flex-grand-parent grand2">
+            <div class="flex-parent2">
+                <div class="work-image">
+                    <img src="https://i.postimg.cc/7G3bNH8B/texture4.jpg" alt="Bow">
+                </div>
+                <div class="work-description">
+                    <h1 class="services-title">vertigo</h1>
                     <p>
-                        Sed condimentum ligula, elementum eu, wisi. Morbi risus dictum
-                        eu, sem. Mauris tempor diam. Aliquam et justo. Integer nonummy
-                        sagittis. Curabitur egestas. Cum sociis natoque penatibus et
-                        magnis dis parturient montes, nascetur ridiculus mus. Etiam tellus.
-                        Integer euismod nibh, imperdiet felis, vestibulum et, congue urna.
-                        Duis sit amet, volutpat a.
+                        Lorem ipsum dolor sit amet sapien tristique sodales.
+                        Vivamus nec augue.
                     </p>
-                    <div class="floating-number">1</div>
-                    <div class="btn btn-two">read more</div>
-                </div>
-                <div class="flex-parent">
-                    <h1 class="services-title">code</h1>
-                    <p>cras vel comodo.</p>
-                    <p>
-                        In mollis, purus non placerat a, hendrerit ac, blandit ipsum,
-                        vel nonummy dui lectus, pellentesque erat dictum eu, facilisis
-                        vel, adipiscing urna. Aenean quis massa lacinia turpis ligula,
-                        semper risus in dolor. Quisque urna. Donec ipsum primis in est.
-                        Maecenas ut lorem. Donec non ante ipsum dolor nonummy ligula.
-                        Vivamus.
-                    </p>
-                    <div class="floating-number">2</div>
-                    <div class="btn btn-three">read more</div>
-                </div>
-                <div class="flex-parent">
-                    <h1 class="services-title">marketing</h1>
-                    <p>donec fringilla.</p>
-                    <p>
-                        Sed adipiscing mauris. Donec consectetuer adipiscing sollicitudin.
-                        Fusce ullamcorper ligula accumsan sit amet, nonummy condimentum
-                        eget, nulla. Vivamus magna. Cum sociis natoque penatibus et dui.
-                        Cras eu turpis semper eros. Phasellus purus. Sed vehicula
-                        ullamcorper. Nam ac erat. Proin non sem. Quisque vehicula enim
-                        molestie ultricies ante.
-                    </p>
-                    <div class="floating-number">3</div>
-                    <div class="btn btn-four">read more</div>
-                </div>
-                </div>
-        </section>
-        <section class="container">
-            <h1 class="title">our work</h1>
-            <div class="flex-grand-parent grand2">
-                <div class="flex-parent2">
-                    <div class="work-image">
-                        <img src="https://i.postimg.cc/7G3bNH8B/texture4.jpg" alt="Bow">
-                    </div>
-                    <div class="work-description">
-                        <h1 class="services-title">vertigo</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet sapien tristique sodales.
-                            Vivamus nec augue.
-                        </p>
-                        <p>Vestibulum.</p>
-                        <div class="btn btn-five">read more</div>
-                    </div>
-                </div>
-                <div class="flex-parent2">
-                    <div class="work-image">
-                        <img src="https://i.postimg.cc/R3nWN1Px/texture3.jpg" alt="Stocks">
-                    </div>
-                    <div class="work-description">
-                        <h1 class="services-title">eloquence</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet erat. Nullam dui nulla,
-                            egestas ac.
-                        </p>
-                        <p>Semper.</p>
-                        <div class="btn btn-five">read more</div>
-                    </div>
-                </div>
-                <div class="flex-parent2">
-                    <div class="work-image">
-                        <img src="https://i.postimg.cc/qhVzntYh/texture2.jpg" alt="Travel">
-                    </div>
-                    <div class="work-description">
-                        <h1 class="services-title">lithe</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet metus. Curabitur vitae nibh
-                            nulla dictum.
-                        </p>
-                        <p>Wisi.</p>
-                        <div class="btn btn-five">read more</div>
-                    </div>
-                </div>
-                <div class="flex-parent2">
-                    <div class="work-image">
-                        <img src="https://i.postimg.cc/SnPXS1fG/texture1.jpg" alt="Bow">
-                    </div>
-                    <div class="work-description">
-                        <h1 class="services-title">serendepity</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet nunc felis, feugiat sit amet,
-                            consectetuer lectus.
-                        </p>
-                        <p>Relax.</p>
-                        <div class="btn btn-five">read more</div>
-                    </div>
+                    <p>Vestibulum.</p>
+                    <div class="btn btn-five">read more</div>
                 </div>
             </div>
-        </section>
-        <section class="container contact">
+            <div class="flex-parent2">
+                <div class="work-image">
+                    <img src="https://i.postimg.cc/R3nWN1Px/texture3.jpg" alt="Stocks">
+                </div>
+                <div class="work-description">
+                    <h1 class="services-title">eloquence</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet erat. Nullam dui nulla,
+                        egestas ac.
+                    </p>
+                    <p>Semper.</p>
+                    <div class="btn btn-five">read more</div>
+                </div>
+            </div>
+            <div class="flex-parent2">
+                <div class="work-image">
+                    <img src="https://i.postimg.cc/qhVzntYh/texture2.jpg" alt="Travel">
+                </div>
+                <div class="work-description">
+                    <h1 class="services-title">lithe</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet metus. Curabitur vitae nibh
+                        nulla dictum.
+                    </p>
+                    <p>Wisi.</p>
+                    <div class="btn btn-five">read more</div>
+                </div>
+            </div>
+            <div class="flex-parent2">
+                <div class="work-image">
+                    <img src="https://i.postimg.cc/SnPXS1fG/texture1.jpg" alt="Bow">
+                </div>
+                <div class="work-description">
+                    <h1 class="services-title">serendepity</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet nunc felis, feugiat sit amet,
+                        consectetuer lectus.
+                    </p>
+                    <p>Relax.</p>
+                    <div class="btn btn-five">read more</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container contact">
         <h1 class="title">contact us</h1>
-            <div class="flex-grand-parent">
-                <form class="contact-form">
-                    <input type="text"
-                           name="username"
-                           placeholder="Your name">
-                    <input type="email"
-                           name="Your e-mail"
-                           placeholder="Your e-mail">
-                    <input type="text"
-                           name="subject"
-                           placeholder="Subject">
-                    <textarea name="subject"
-                              rows="10"
-                              cols="20"
-                              placeholder="Type your message here"
-                              max-length="100">
+        <div class="flex-grand-parent">
+            <form class="contact-form">
+                <input type="text" name="username" placeholder="Your name">
+                <input type="email" name="Your e-mail" placeholder="Your e-mail">
+                <input type="text" name="subject" placeholder="Subject">
+                <textarea name="subject" rows="10" cols="20" placeholder="Type your message here" max-length="100">
                     </textarea>
-                    <button class="btn btn-one" type="submit">Submit</button>
-                </form>
-                <div class="contact-data">
-                    <h2>sales specialist</h2>
-                    <p>Eleneor</p><br>
-                    <h2>adress</h2>
-                    <p>GothamCity</p>
-                    <h2>phone</h2>
-                    <p>800-700-900</p>
-                </div>
+                <button class="btn btn-one" type="submit">Submit</button>
+            </form>
+            <div class="contact-data">
+                <h2>sales specialist</h2>
+                <p>Eleneor</p><br>
+                <h2>adress</h2>
+                <p>GothamCity</p>
+                <h2>phone</h2>
+                <p>800-700-900</p>
             </div>
-        </section>
-        <footer class="container">
-            <div class="social">
+        </div>
+    </section>
+    <footer class="container">
+        <div class="social">
             <ul>
                 <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i>Instagram</a></li>
                 <li><a href="#"><i class="fab fa-behance"></i>Behance</a></li>
             </ul>
-            </div>
-        </footer>
-    </body>
+        </div>
+    </footer>
+</body>
+
 </html>
